--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,6 +17,9 @@
   </div>
 </div>
 
+<a routerLink="/dashboard" class="dashboard-button">Go to Dashboard</a>
+
+
 <footer class="footer">
   <p>&copy; 2025 Early Bird Jobs. All rights reserved.</p>
 </footer>
