--- a/src/app/jobdetail/jobdetail.component.html
+++ b/src/app/jobdetail/jobdetail.component.html
@@ -1,1 +1,12 @@
-<p>jobdetail works!</p>
+<!-- src/app/jobdetail/jobdetail.component.html -->
+<ng-container *ngIf="job; else noJob">
+    <h2>{{ job.title }}</h2>
+    <p><strong>Company:</strong> {{ job.company }}</p>
+    <p><strong>Location:</strong> {{ job.location }}</p>
+    <p><strong>Description:</strong> {{ job.description }}</p>
+    <button [routerLink]="['/apply', job.id]">Apply</button>
+</ng-container>
+
+<ng-template #noJob>
+    <p>Job not found.</p>
+</ng-template>
