--- a/src/app/joblist/joblist.component.html
+++ b/src/app/joblist/joblist.component.html
@@ -1,1 +1,10 @@
-<p>joblist works!</p>
+<h2>Available Jobs</h2>
+
+<input type="text" [(ngModel)]="searchTerm" placeholder="Search for a job title" />
+
+<div *ngFor="let job of filteredJobs" class="job-card">
+    <h3>{{ job.title }}</h3>
+    <p><strong>Company:</strong> {{ job.company }}</p>
+    <p><strong>Location:</strong> {{ job.location }}</p>
+    <p><strong>Type:</strong> {{ job.type }}</p>
+</div>
