--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,13 @@
-<div class="wrapper">
-  <header class="header">
-    <h1 class="title">Early Bird Jobs</h1>
-    <p class="description">
-      A Job Portal that aims to aid CBS Students in their career aspirations!
-    </p>
-  </header>
+<div class="home-container">
+  <h1>Early Bird Job</h1>
+  <p>A Job Portal that aims to aid CBS Students in their career aspirations!</p>
 
-  <div class="button-container">
-    <a routerLink="/login" class="login-button">
-      Login
-    </a>
+  <div class="button-group">
+    <button routerLink="/login">Login</button>
+    <button routerLink="/signup" class="outlined">Sign Up</button>
+  </div>
 
-    <a routerLink="/signup" class="signup-button">
-      Sign Up
-    </a>
+  <div class="back-link">
+    <a routerLink="/dashboard">← Go to Dashboard</a>
   </div>
 </div>
-
-<a routerLink="/dashboard" class="dashboard-button">Go to Dashboard</a>
-
-
-<footer class="footer">
-  <p>&copy; 2025 Early Bird Jobs. All rights reserved.</p>
-</footer>
