--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -14,3 +14,5 @@
     <button type="submit" class="signup-button">Sign Up</button>
   </form>
 </div>
+
+<button routerLink="/">Back back to frontpage</button>
