--- a/src/app/managejobs/managejobs.component.html
+++ b/src/app/managejobs/managejobs.component.html
@@ -1,21 +1,34 @@
-<h2>Manage Jobs</h2>
+<div class="manage-wrapper">
+  <h2>Your Job Postings</h2>
 
-<div *ngFor="let job of jobs" class="job-card">
+  <div *ngFor="let job of jobs" class="job-card">
     <h3>{{ job.title }}</h3>
-    <p><strong>Company:</strong> {{ job.company }}</p>
     <p><strong>Location:</strong> {{ job.location }}</p>
 
-    <button (click)="editJob(job.id)" class="btn">Edit</button>
-    <button (click)="deleteJob(job.id)" class="btn delete">Delete</button>
-    <button (click)="toggleApplications(job.id)" class="btn view">
-        {{ expandedJobId === job.id ? 'Hide' : 'View' }} Applications
-    </button>
-
-    <div *ngIf="expandedJobId === job.id">
-        <h4>Applications:</h4>
-        <div *ngFor="let app of applications[job.id]">
-            <p><strong>Resume:</strong> {{ app.resumeContent }}</p>
-            <p><strong>Cover Letter:</strong> {{ app.coverLetter }}</p>
-        </div>
+    <div class="actions">
+      <button (click)="editJob(job.id)" class="btn">Edit</button>
+      <button (click)="deleteJob(job.id)" class="btn delete">Delete</button>
+      <button (click)="toggleApplications(job.id)" class="btn view">
+        {{ expandedJobId === job.id ? 'Hide Applicants' : 'View Applicants' }}
+      </button>
     </div>
+
+    <div *ngIf="expandedJobId === job.id" class="applicant-list">
+      <h4>Applicants:</h4>
+      <ng-container *ngIf="applications[job.id]?.length; else noApps">
+        <div *ngFor="let app of applications[job.id]" class="app-card">
+          <p><strong>Applicant ID:</strong> {{ app.jobseekerId }}</p>
+          <p><strong>Cover Letter:</strong> {{ app.coverLetter }}</p>
+          <p><strong>Resume:</strong> {{ app.resumeContent }}</p>
+        </div>
+      </ng-container>
+      <ng-template #noApps>
+        <p>No applications yet.</p>
+      </ng-template>
+    </div>
+  </div>
+
+  <button routerLink="/post-job" class="btn new-job">
+    + Post a New Job
+  </button>
 </div>
