--- a/src/app/joblist/joblist.component.html
+++ b/src/app/joblist/joblist.component.html
@@ -12,7 +12,7 @@
         <h3>{{ job.title }}</h3>
         <p><strong>Company:</strong> {{ job.company }}</p>
         <p><strong>Location:</strong> {{ job.location }}</p>
-        <p><strong>Type:</strong> {{ job.type }}</p>
+        <p><strong>Type:</strong> {{ job.category }}</p>
         <button [routerLink]="['/apply', job.id]" class="apply-btn">
             Apply
         </button>
