--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,15 +4,30 @@
     <h2>Login</h2>
     <form (ngSubmit)="onSubmit()" #f="ngForm">
       <label for="email">Email</label>
-      <input id="email" name="email" type="email" [(ngModel)]="email" required />
+      <input
+        id="email"
+        name="email"
+        type="email"
+        [(ngModel)]="user.email"
+        required
+      />
 
       <label for="password">Password</label>
-      <input id="password" name="password" type="password" [(ngModel)]="password" required />
+      <input
+        id="password"
+        name="password"
+        type="password"
+        [(ngModel)]="user.password"
+        required
+      />
 
       <button class="btn btn-primary" type="submit" [disabled]="!f.valid">
         Login
       </button>
     </form>
-    <button routerLink="/signup" class="btn btn-outline">Sign Up</button>
+
+    <button routerLink="/signup" class="btn btn-outline">
+      Sign Up
+    </button>
   </div>
 </div>
