2 data binding and validation on postjobcomp and fixed jobtitle in backend

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -21,8 +21,8 @@
       <label for="role">Select Role</label>
       <select id="role" [(ngModel)]="user.role" name="role" required>
         <option value="" disabled selected>Select Role</option>
-        <option value="jobseeker">Job Seeker</option>
-        <option value="recruiter">Recruiter</option>
+        <option value="jobseeker">JobSeeker</option>
+        <option value="employer">Employer</option>
       </select>
     </div>
 
